AC_INIT([github-contest], [0.1.0], [blackskad@gmail.com], [github-contest])
AC_CONFIG_SRCDIR([Makefile.am])
AC_CONFIG_HEADERS(config.h)
AM_INIT_AUTOMAKE([dist-bzip2])
AM_MAINTAINER_MODE

AC_PROG_CC
AM_PROG_CC_C_O
AC_DISABLE_STATIC
AC_PROG_LIBTOOL

AC_PATH_PROG(VALAC, valac, valac)
AC_SUBST(VALAC)

AC_SUBST(CFLAGS)
AC_SUBST(CPPFLAGS)
AC_SUBST(LDFLAGS)

GLIB_REQUIRED=2.12.0

PKG_CHECK_MODULES(GITHUB_CONTEST, glib-2.0 >= $GLIB_REQUIRED gobject-2.0 >= $GLIB_REQUIRED)
AC_SUBST(GITHUB_CONTEST_CFLAGS)
AC_SUBST(GITHUB_CONTEST_LIBS)

AC_CONFIG_FILES([Makefile
	src/Makefile
	po/Makefile.in])

AC_OUTPUT
